--- a/.github/workflows/sync-labels.yml
+++ b/.github/workflows/sync-labels.yml
@@ -25,4 +25,4 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 22
-      - run: npx github-label-sync -a '${{ secrets.GITHUB_TOKEN }}' -l '.github/labels.yml' ${{ github.repository }}
+      - run: npx github-label-sync -a '${{ secrets.GITHUB_TOKEN }}' -l 'https://raw.githubusercontent.com/TerminalMC/.github/HEAD/.github/labels.yml' ${{ github.repository }}
