Update workflow templates

--- a/workflow-templates/check-build.yml
+++ b/workflow-templates/check-build.yml
@@ -1,18 +1,16 @@
-# Builds the project on Linux and Windows as a partial defence against bad commits
+# Builds the project on Linux and Windows as a partial defense against bad commits
 name: Check Build
 
 on:
   push:
     paths: [
       '**src/**',
-      '**/*gradle*',
-      LICENSE
+      '**/*gradle*'
     ]
   pull_request:
     paths: [
       '**src/**',
-      '**/*gradle*',
-      LICENSE
+      '**/*gradle*'
     ]
   workflow_dispatch:
 
