Update bug report template

--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -6,20 +6,29 @@ body:
   - type: markdown
     attributes:
       value: >-
-        **This issue tracker is not intended for support requests!** Unless you are certain that 
-        you have found a defect, and you are able to point to where the problem is, you should not 
-        open an issue. For general support or if you're unsure, please ask on 
-        [Discord](https://discord.terminalmc.dev).
+        **This issue tracker is not intended for support requests!**
         
-        Additionally, before you open a new issue:
         
-        - **Have you checked whether the issue has already been reported?** If it has been, 
-        consider adding more information to the existing issue instead.
-        
-        - **Have you determined the minimum set of instructions to reproduce the issue?** If the 
-        problem only occurs with other mods installed, then you should attempt to narrow down 
-        exactly which mods are causing it. Please do not provide your entire list of mods and 
-        expect that we will be able to figure out the problem.
+        Unless you are certain that you have found a defect, and you are able to accurately 
+        describe how to reproduce it, you should not open an issue. For general support or 
+        if you're unsure, please ask on [Discord](https://discord.terminalmc.dev).
+  - type: checkboxes
+    id: preliminary-checks
+    attributes: 
+      label: Before you open a new issue;
+      options:
+        - label: >-
+            **Have you verified that this is a bug or defect in this mod?**
+          required: true
+        - label: >-
+            **Have you checked whether the issue has already been reported?** If it has been, 
+            consider adding more information to the existing issue instead.
+          required: true
+        - label: >-
+            **Have you determined the minimum set of instructions to reproduce the issue?** If the 
+            problem only occurs with other mods installed, then you should attempt to narrow down 
+            exactly which mods are causing it.
+          required: true
   - type: input
     id: mod-version
     attributes:
@@ -27,7 +36,7 @@ body:
       description: >-
         Specify the version(s) of the mod in which you have identified this issue.
         
-        **Example:** `v1.2.0-Fabric-1.20.6`
+        **Example:** `v2.2.0+1.21.4`
     validations:
       required: true
   - type: input
@@ -36,7 +45,7 @@ body:
       label: Mod Loader
       description: >-
         Specify the mod loader(s) in which you have identified this issue.
-
+        
         **Example:** `Fabric`
     validations:
       required: true
@@ -47,16 +56,17 @@ body:
       description: >-
         Specify the Minecraft version(s) in which you have identified this issue.
 
-        **Example:** `1.20.6`
+        **Example:** `1.21.4`
     validations:
       required: true
   - type: textarea
     id: description
     attributes:
-      label: Bug Description
+      label: Issue Description
       description: >-
         Describe in detail the issue you are experiencing, including the conditions in which it 
-        occurs, and the names and versions of any other mods required to cause it.
+        occurs, the names and versions of any other mods required to cause it, and the steps
+        required to reproduce it.
 
         **Hint:** If you have any screenshots, videos, or other information that you feel is 
         necessary to explain the issue, you can attach them here.
@@ -71,27 +81,16 @@ body:
     validations:
       required: true
   - type: textarea
-    id: reproduction-steps
-    attributes:
-      label: Reproduction Steps
-      description: >-
-        Describe the procedure required to reproduce this issue. Make sure your instructions are 
-        as clear and concise as possible, as other people will have to follow your guide in order 
-        to re-create the issue.
-        
-        **Hint:** A common way to fill this section out is to write a step-by-step guide.
-    validations:
-      required: true
-  - type: textarea
     id: log-file
     attributes:
-      label: Log File
+      label: Log File (required)
       description: >-
         **Hint:** Log files are located in the `logs` folder of your Minecraft instance, typically 
         `.minecraft/logs`. You will usually want the `latest.log` file, since that file belongs to 
         the most recent session of the game.
       placeholder: >-
         Drag-and-drop the log file here.
+      render: mcfunction
     validations:
       required: true
   - type: textarea
@@ -103,3 +102,4 @@ body:
         typically `.minecraft/crash-reports`.
       placeholder: >-
         Drag-and-drop the crash report file here.
+      render: mcfunction
