--- a/.github/labels.yml
+++ b/.github/labels.yml
@@ -17,6 +17,11 @@
   color: 'BFD4F2'
   description: 'Closed: Not actionable or inadequate information'
   aliases: []
+  
+- name: E/scope
+  color: 'BFD4F2'
+  description: 'Closed: Out of scope'
+  aliases: []
 
 - name: E/wontfix
   color: 'BFD4F2'
@@ -41,9 +46,10 @@
   aliases: []
 
 
-- name: S/available
+
+- name: S/accepted
   color: '006B75'
-  description: 'Status: Available for community contribution'
+  description: 'Status: Accepted but not assigned'
   aliases: []
 
 - name: S/blocked
@@ -51,7 +57,7 @@
   description: 'Status: Blocked by another event'
   aliases: []
 
-- name: S/complete
+- name: S/finished
   color: '0E8A16'
   description: 'Status: Complete, awaiting release'
   aliases: [fixed]
