--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -6,36 +6,42 @@ body:
   - type: markdown
     attributes:
       value: >-
-        ### ⚠️ Bug Report
-        
+        ### ⚠️ Mod Bug Report
+
         **Thank you for taking the time to make a report!** This form is designed to help you
         provide the information necessary for us to understand and fix the issue. Before you start,
         please complete the following checks:
-        
-        
-        1. Are you using the latest version of the mod? If there is a more recent version of the mod
+
+
+        1. Are you sure that the mod is not working as described? For general support, or if you are
+        unsure, please use [Discord](https://discord.terminalmc.dev).
+
+
+        2. Are you using the latest version of the mod? If there is a more recent version of the mod
         available for your version of Minecraft, please check whether the issue still occurs on that
         version.
-        
-        
-        2. Has the issue already been reported? If it has been, please do not open a new issue, but
-        if you have additional information please comment on the existing report.
-        
-        
-        3. Have you determined the minimum set of instructions to reproduce the issue? If the issue
+
+
+        3. Has the issue already been reported? If it has been, please do not open a new report, but
+        if you have additional information please comment on the existing one.
+
+
+        4. Have you determined the minimum set of instructions to reproduce the issue? If the issue
         only occurs in specific situations or with other mods installed, please attempt to narrow
         down exactly what conditions or mods are required to reproduce it.
 
   - type: checkboxes
     id: preliminary-checks
-    attributes: 
+    attributes:
       label: Checklist
       options:
+        - label: This is not a help or support request.
+          required: true
         - label: This issue exists on the latest release for my Minecraft version.
           required: true
         - label: This issue has not already been reported.
           required: true
-        - label: I have determined the minimal reproduction requirements. 
+        - label: I have determined the minimal reproduction requirements.
           required: true
 
   - type: input
@@ -66,7 +72,7 @@ body:
       label: Mod Version
       description: >-
         Which version of this mod are you using?
-        
+
         **Example:** `2.2.0+1.21.4`
     validations:
       required: true
@@ -80,25 +86,39 @@ body:
         there are no crashes, logs help identify version details and potential error messages.
 
 
-        **Hint:** Log files are located in the `logs` folder of your Minecraft instance, typically 
-        `.minecraft/logs`. You will usually want the `latest.log` file, since that file belongs to 
-        the most recent session of the game. Alternatively, some launchers such as Prism support 
+        **Hint:** Log files are located in the `logs` folder of your Minecraft instance, typically
+        `.minecraft/logs`. You will usually want the `latest.log` file, since that file belongs to
+        the most recent session of the game. Alternatively, some launchers such as Prism support
         uploading logs to mclo.gs directly.
-      placeholder: https://mclo.gs/your-log-link
+      placeholder: https://mclo.gs/log-link
     validations:
       required: true
+
+  - type: input
+    id: crash-link
+    attributes:
+      label: Crash Report (optional)
+      description: >-
+        If the game is crashing, please upload the crash report to [mclo.gs](https://mclo.gs) and
+        paste the link here. Even if you have already provided a log file, a crash report may
+        contain unique information.
+
+
+        **Hint:** Crash reports are located in the `crash-reports` folder of your Minecraft
+        instance, typically `.minecraft/crash-reports`. You will usually want the most recent file.
+      placeholder: https://mclo.gs/crash-report-link
 
   - type: textarea
     id: description
     attributes:
       label: Issue Description
       description: >-
-        Please describe in detail the issue you are experiencing. If you have any screenshots, 
+        Please describe in detail the issue you are experiencing. If you have any screenshots,
         videos, or other resources that help illustrate the problem, you can attach them here.
       placeholder: Describe the issue...
     validations:
       required: true
-        
+
   - type: textarea
     id: reproduction-steps
     attributes:
@@ -107,11 +127,11 @@ body:
         Please list the steps that we should follow to encounter the issue. If you are unsure, or
         unable to consistently reproduce it, please provide a detailed description of what you
         were doing when the issue occurred.
-  
+
         1. Do X
-        
+
         2. Do Y
-        
+
         3. Issue occurs
       placeholder: List the steps to reproduce the issue...
     validations:
@@ -122,5 +142,5 @@ body:
     attributes:
       label: Expected Behavior (optional)
       description: >-
-        Describe briefly what you believe should happen if the issue was fixed. If the answer is 
-        obvious (such as if the game is crashing), you can skip this.
+        Please describe briefly what you believe should happen if the issue was fixed. If the answer
+        is obvious (such as if the game is crashing), you can skip this.
