--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -22,7 +22,7 @@ body:
         version.
 
 
-        3. Has the issue already been reported? If it has been, please do not open a new report, but
+        3. Has the issue already been reported? If it has been, please do not make a new report, but
         if you have additional information please comment on the existing one.
 
 
