--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -6,20 +6,20 @@ body:
   - type: markdown
     attributes:
       value: >-
-        ### 🛠️ Feature Request
-        
-        **Thank you for taking the time to suggest a new feature!** This form is designed to help 
+        ### 🛠️ Mod Feature Request
+
+        **Thank you for taking the time to suggest a new feature!** This form is designed to help
         you provide the information necessary for us to understand and implement the feature. Before
         you start, please complete the following checks:
-        
-        
+
+
         1. Are you requesting either a new feature or an improvement of existing functionality? For
         general support, or to request an update or backport, please use
         [Discord](https://discord.terminalmc.dev).
-        
-        
+
+
         2. Have you checked whether the feature already exists on the latest version? If you want to
-        request that an existing feature be backported, please use 
+        request that an existing feature be backported, please use
         [Discord](https://discord.terminalmc.dev).
 
 
@@ -33,6 +33,8 @@ body:
       options:
         - label: I am requesting a new feature or a functional improvement.
           required: true
+        - label: I am not requesting an update or backport.
+          required: true
         - label: This feature does not exist on the latest version.
           required: true
         - label: This feature has not already been requested.
@@ -44,22 +46,22 @@ body:
       label: Feature Description
       description: >-
         Please describe in detail what you would like added or changed, with reasoning. If you have
-        considered alternative options, include them as well.
-        
-        
-        **Hint:** Requests that lack detail or do not include a clear reason are less likely to be 
+        considered alternative options, describe them as well.
+
+
+        **Hint:** Requests that lack detail or do not include a clear reason are less likely to be
         considered.
       placeholder: Describe the feature...
     validations:
       required: true
-      
+
   - type: textarea
     id: use-case
     attributes:
       label: Use Case
       description: >-
         Please explain how this change would improve the experience of using the mod, with reference
-        to specific scenarios or examples as applicable.
+        to specific scenarios or examples as appropriate.
       placeholder: Describe your use-case...
     validations:
       required: true
@@ -67,9 +69,10 @@ body:
   - type: input
     id: mc-version
     attributes:
-      label: Minecraft Version (optional)
+      label: Minecraft Version (if not latest)
       description: >-
-        Feature updates are generally only released for the latest Minecraft version. If you need
-        the new feature on an older version, list the version(s) here.
+        Feature updates are generally only released for the latest Minecraft version. If you would
+        like the new feature to be added to an older version, list the version(s) here.
+
 
         **Examples:** `1.21.4`, `1.20.1`
