--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,5 +1,8 @@
 blank_issues_enabled: false
 contact_links:
+  - name: Update or backport request
+    url: https://discord.terminalmc.dev
+    about: For any version requests, please use Discord
   - name: Support enquiry, question or discussion
     url: https://discord.terminalmc.dev
-    about: For any issue that isn't specifically a bug report or feature request, please use Discord
+    about: For any other communication, please use Discord
